Enhance the init process

--- a/templates/default/run/index.html
+++ b/templates/default/run/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>my first elm app</title>
+    <title>my-elm-application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <link
