--- a/templates/default/src/index.html
+++ b/templates/default/src/index.html
@@ -17,13 +17,9 @@
       integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
       crossorigin="anonymous"
     />
-    <script src="elm.compiled.js"></script>
+    <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
   </head>
   <body>
-    <script>
-      window.addEventListener('load', function() {
-        const elm = Elm.Main.fullscreen();
-      });
-    </script>
+      <script src="./_index.js"></script>
   </body>
 </html>
