Fix naming differences

--- a/templates/default/src/index.html
+++ b/templates/default/src/index.html
@@ -20,6 +20,6 @@
     <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
   </head>
   <body>
-      <script src="./_index.js"></script>
+      <script src="./index.js"></script>
   </body>
 </html>
