Better elm 0.19 workarounds

--- a/templates/default/dev/index.html
+++ b/templates/default/dev/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>my-elm-application</title>
+    <title>fuel_vision_ui</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <link
@@ -18,8 +18,14 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
+    <script src="./elm.js"></script>
   </head>
   <body>
-      <script src="./index.js"></script>
+    <div id="elm"></div>
+    <script>
+      var app = Elm.Main.init({
+        node: document.getElementById('elm')
+      });
+    </script>
   </body>
 </html>
