Handle page refreshes

--- a/templates/default/dev/index.html
+++ b/templates/default/dev/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
-    <script src="./elm.js"></script>
+    <script src="/elm.js"></script>
   </head>
   <body>
     <div id="elm"></div>
